--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ sphinxcontrib-napoleon = "*"
 click = "*"
 install = "*"
 rinohtype = "*"
+mkdocs = "*"
 
 [dev-packages]
 pipenv-setup = {extras = ["black"], version = "*"}
