--- a/requirements.txt
+++ b/requirements.txt
@@ -47,11 +47,6 @@ pyyaml-env-tag==0.1; python_version >= '3.6'
 pyyaml==6.0; python_version >= '3.6'
 recommonmark==0.7.1
 requests==2.28.1; python_full_version >= '3.7.0' and python_full_version < '4.0.0'
-rinoh-typeface-dejavuserif==0.1.3
-rinoh-typeface-texgyrecursor==0.1.1
-rinoh-typeface-texgyreheros==0.1.1
-rinoh-typeface-texgyrepagella==0.1.1
-rinohtype==0.5.4
 scikit-learn==1.1.2; python_version >= '3.8'
 scipy==1.9.1; python_version < '3.12' and python_version >= '3.8'
 seaborn==0.11.2
@@ -64,3 +59,4 @@ threadpoolctl==3.1.0; python_version >= '3.6'
 urllib3==1.26.12; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_full_version < '4.0.0'
 watchdog==2.1.9; python_version >= '3.6'
 zipp==3.8.1; python_full_version >= '3.7.0'
+mkdocstrings==0.19.0; python_full_version >= '3.7.0'
