--- a/requirements.txt
+++ b/requirements.txt
@@ -60,3 +60,4 @@ urllib3==1.26.12; python_version >= '2.7' and python_version not in '3.0, 3.1, 3
 watchdog==2.1.9; python_version >= '3.6'
 zipp==3.8.1; python_full_version >= '3.7.0'
 mkdocstrings==0.19.0; python_full_version >= '3.7.0'
+mkdocstrings-python==0.7.1
